Note about memory problem for mvn clean install